# GrailLight

./: .#Makefile  .#todo_translate_form.pl  .gitignore  ANNODIS_README.txt  DeepGrail.tcl  Makefile  Makefile.in  README  README.md  Supertag.tcl  add_words.pl  annodis.pl  auxiliary_scripts.md  big_french_drt.pl  ccg_formulas.pl  chart.pl  chart.pl.in  chart_cr.pl  chart_lp.pl  chart_old.pl  chart_proof_to_parser_actions.pl  chart_proof_to_parser_actions_old.pl  chart_proof_to_parser_actions_w_stacks.pl  chart_proof_to_transitions.pl  chart_to_const.pl  chart_var.pl  check_lemmas.pl  check_proofs.pl  collect_comments.tcl  command_line_usage.md  compute_count_probs.pl  config.status  configure  configure.ac  corpus_prop.pl  count_formulas.pl  cpa1.pl  cpa10.pl  cpa100.pl  cpa5.pl  (+76 more)
Resources/: bootstrap_formulas.txt  formulas.txt
lassy/: extract.pl  lassy2prolog.pl  latex.pl  latex_proofs.tex  merge_mwu.pl  moretrees.pl  print_lexicon.pl  remove_epsilon.pl  sem_utils.pl  simplify_tree.pl  tree234.pl  trees.pl
